# ecg-few

./: .gitignore  README.md  pyproject.toml
docs/: pattern-detection-hypothesis.md  run-pattern-detection.md  tiny-synthetic-dataset.md  visual-qa-templates.md
prompts/binary/: rbbb.md  st_elevation.md  t_wave_inversion.md
prompts/clinical/: brugada_patient.md
prompts/multilabel/: label_only.md  morphology_described.md
prompts/qrs/: right_precordial_morphology.md
prompts/system/: clinical_brugada_huca.md  default.md  qrs_huca.md
scripts/dataset/: build_brugada_huca_dataset.py  build_ecg_dataset.py  build_simulator_qrs_dataset.py  build_vlm_instruction_dataset.py
scripts/eval/: audit_loocv_results.py  compare_cnn_domain_adaptation_reports.py  compare_cnn_sim_real_reports.py  compare_loocv_reports.py  evaluate_binary_predictions.py  evaluate_multilabel_predictions.py  run_cnn_loocv.py  run_pattern_detection_experiments.py  run_vlm_eval.py  run_vlm_loocv.py  validate_vlm_loocv.py
scripts/jobs/: run_vllm_icl_controls.sh  run_vllm_sweep.sh  vlm_server.sh
scripts/run/: audit_loocv_results.sh  build_brugada_huca_dataset.sh  build_loocv_comparison.sh  build_simulator_qrs_dataset.sh  build_synthetic_dataset.sh  build_tfg_report_figures.sh  build_visual_qa.sh  collect_tfg_figures.sh  run_all_pattern_detection.sh  run_all_vlm_experiments.sh  run_cnn_domain_adaptation_loocv.sh  run_cnn_loocv.sh  run_cnn_simulator_qrs_loocv.sh  run_proprietary_pattern_detection.sh  run_tfg_end_to_end.sh  run_vllm_pattern_detection.sh  (+2 more)
tests/: test_package.py  test_vlm_clinical.py
(+69 files in other folders)
