[project]
name = "ecg-vlm"
version = "0.1.0"
description = "Synthetic ECG beat image experiments for VLM morphology pattern detection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "numpy>=2.0",
    "pandas>=2.2",
    "pillow>=10.4",
    "pydantic>=2.8",
    "scikit-learn>=1.5",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
